# Halcyn

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Doxyfile  INSTALL.md  LICENSE  README.md  SECURITY.md  mkdocs-wiki.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  package.yml  pages.yml
browser_control_center/: __init__.py  control_center_http_server.py  control_center_state.py  scene_studio_live_session.py  scene_studio_scene_builder.py
browser_control_center/static/: activity-monitor.html  activity-monitor.js  app.js  index.html  styles.css
browser_control_center/tests/: test_beginner_walkthrough_wiki.py  test_browser_control_center.py  test_browser_scene_studio.py  test_repository_contracts.py
browser_scene_studio/: README.md
browser_scene_studio/static/: app.js  index.html
client_studio/: README.md
client_studio/static/: app.js  index.html  styles.css
control_plane/: __init__.py  client_studio.py  client_studio_live.py  runtime.py  server.py
control_plane/static/: app.js  index.html  styles.css
control_plane/tests/: test_client_studio.py  test_control_plane.py  test_repository_contracts.py
desktop_multi_renderer_data_source_panel/: README.md  __init__.py  __main__.py  multi_renderer_data_source_builder.py  multi_renderer_data_source_controller.py  multi_renderer_data_source_window.py
desktop_multi_renderer_data_source_panel/tests/: test_desktop_multi_renderer_data_source_panel.py  test_desktop_shared_control_support.py
desktop_render_control_panel/: README.md  __init__.py  __main__.py  audio_input_service.py  desktop_control_panel_controller.py  desktop_control_panel_window.py  desktop_control_scene_builder.py  render_api_client.py
desktop_render_control_panel/tests/: test_desktop_render_control_panel.py
desktop_shared_control_support/: __init__.py  activity_journal.py  activity_log.py  activity_log_window.py  activity_monitor_app.py  audio_input_service.py  local_json_bridge.py  render_api_client.py
desktop_spectrograph_audio_source_panel/: README.md  __init__.py  __main__.py  spectrograph_audio_source_builder.py  spectrograph_audio_source_controller.py  spectrograph_audio_source_window.py  spectrograph_external_bridge_client.py
desktop_spectrograph_audio_source_panel/tests/: test_desktop_spectrograph_audio_source_panel.py
desktop_spectrograph_control_panel/: README.md  __init__.py  __main__.py  external_data_bridge_server.py  spectrograph_control_panel_controller.py  spectrograph_control_panel_window.py  spectrograph_scene_builder.py
desktop_spectrograph_control_panel/tests/: test_desktop_spectrograph_control_panel.py
desktop_visualizer_operator_console/: README.md  __init__.py  __main__.py  visualizer_operator_console_controller.py  visualizer_operator_console_window.py  visualizer_operator_scene_builder.py
desktop_visualizer_operator_console/tests/: test_visualizer_operator_console.py
docs/doxygen/: external_library_guide.md  mainpage.md  scene_json_guide.md  usage_examples.md
docs/site/: api.html  architecture.html  client-studio.html  code-docs.html  control-center.html  desktop-control-panel.html  field-reference.html  index.html  multi-renderer-data-source-panel.html  scene-studio.html  spectrograph-audio-source-panel.html  spectrograph-suite.html  testing.html  tutorial.html
docs/wiki/: 01-start-here.md  02-meet-the-cast.md  03-follow-one-scene.md  04-scene-json-without-fear.md  05-browser-tools-in-plain-language.md  06-visualizer-studio-as-a-daily-driver.md  07-how-bar-wall-scenes-think.md  08-the-safety-net.md  09-how-to-extend-halcyn.md  10-how-to-read-the-activity-monitor.md  11-common-workflows.md  12-troubleshooting-without-panic.md  13-how-the-tests-protect-you.md  14-how-the-tools-fit-together.md  15-building-features-with-confidence.md  README.md  appendix-command-cheat-sheet.md  appendix-first-hour.md  appendix-glossary.md  appendix-which-tool-should-i-open.md  index.md
examples/: scene_2d_lines.json  scene_2d_triangle.json  scene_3d_tetrahedron.json  scene_3d_wireframe_lines.json
scripts/: bootstrap.ps1  build-beginner-wiki.ps1  build-halcyn-app.ps1  build.ps1  check-all.ps1  client-studio.ps1  common.ps1  coverage-control-plane.ps1  create-release-package.ps1  format-cpp-code.ps1  format.ps1  generate-code-docs.ps1  generate-code-reference-docs.ps1  launch-activity-monitor.ps1  launch-audio-sender.ps1  launch-bars-studio.ps1  launch-bars-workbench.ps1  launch-browser-control-center.ps1  launch-browser-scene-studio.ps1  launch-desktop-multi-renderer-data-source-panel.ps1  launch-desktop-render-control-panel.ps1  launch-desktop-spectrograph-audio-source-panel.ps1  launch-desktop-spectrograph-control-panel.ps1  launch-halcyn-app.ps1  launch-halcyn-spectrograph-app.ps1  launch-operator-console.ps1  launch-signal-router.ps1  launch-spectrograph-audio-workbench.ps1  launch-visualizer-studio.ps1  launch-visualizer-workbench.ps1  launch-visualizer.ps1  lint-browser-control-center.ps1  lint-control-plane.ps1  lint-desktop-multi-renderer-data-source-panel.ps1  lint-desktop-render-control-panel.ps1  lint-desktop-spectrograph-audio-source-panel.ps1  lint-desktop-spectrograph-control-panel.ps1  lint-operator-console.ps1  lint-visualizer-studio.ps1  measure-browser-control-center-coverage.ps1  (+41 more)
src/: main.cpp  spectrograph_main.cpp
src/api/: ApiServer.cpp  ApiServer.hpp
src/app/: Application.cpp  Application.hpp
src/core/: RuntimeLog.cpp  RuntimeLog.hpp  SceneStore.cpp  SceneStore.hpp
src/desktop_app/: Application.cpp  Application.hpp
src/domain/: SceneFactory.cpp  SceneFactory.hpp  SceneJsonCodec.cpp  SceneJsonCodec.hpp  SceneLimits.hpp  SceneTypes.hpp  SceneValidation.cpp  SceneValidation.hpp
src/http_api/: ApiServer.cpp  ApiServer.hpp
src/opengl_renderer/: Renderer.cpp  Renderer.hpp  ShaderProgram.cpp  ShaderProgram.hpp
tests/: ApiServerTests.cpp  SceneJsonCodecTests.cpp  SceneStoreTests.cpp  SceneValidationTests.cpp
(+18 files in other folders)
